// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Document should render correctly if isPublicSiteOpen is false 1`] = `
<div>
  <div
    class="documentWrapper"
    style="width: 100%;"
  >
    <div
      class="document-toolbar"
    >
      <div
        class="copy-page-dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="copy-page-dropdown__trigger "
          title="Copy or share this page"
        >
          <svg
            class="copy-page-icon"
            fill="none"
            height="1em"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="13"
              rx="2"
              ry="2"
              width="13"
              x="9"
              y="9"
            />
            <path
              d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"
            />
          </svg>
          <span>
            Copy page
          </span>
          <span
            aria-hidden="true"
            class="copy-page-dropdown__trigger-divider"
          />
          <svg
            class="copy-chevron"
            fill="none"
            height="1em"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="6 9 12 15 18 9"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="documentView"
      id="test title"
    >
      test content
    </div>
  </div>
</div>
`;

exports[`Document should render correctly if isPublicSiteOpen is true 1`] = `
<div>
  <div
    class="documentWrapper"
    style="width: 100%;"
  >
    <div
      class="document-toolbar"
    >
      <div
        class="copy-page-dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="copy-page-dropdown__trigger "
          title="Copy or share this page"
        >
          <svg
            class="copy-page-icon"
            fill="none"
            height="1em"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="13"
              rx="2"
              ry="2"
              width="13"
              x="9"
              y="9"
            />
            <path
              d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"
            />
          </svg>
          <span>
            Copy page
          </span>
          <span
            aria-hidden="true"
            class="copy-page-dropdown__trigger-divider"
          />
          <svg
            class="copy-chevron"
            fill="none"
            height="1em"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="6 9 12 15 18 9"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="documentView"
      id="test title"
    >
      test content
    </div>
    <div
      data-testid="footerDiv"
    />
  </div>
</div>
`;
